--- a/part2/phonebook/.gitignore
+++ b/part2/phonebook/.gitignore
@@ -1,10 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/part1/courseinfo/node_modules/
-/part1/unicafe/node_modules/
-/part1/anecdotes/node_modules/
-/part2/phonebook/node_modules/
+/node_modules
 /.pnp
 .pnp.js
 
@@ -20,7 +17,6 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.vscode
 
 npm-debug.log*
 yarn-debug.log*
