--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 /part1/anecdotes/node_modules/
 /part2/phonebook/node_modules/
 /part2/countries/node_modules/
+/part3/phonebook-backend/node_modules/
+
 /.pnp
 .pnp.js
 
