--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -11,7 +11,8 @@
   "author": "woodencube",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
