--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -46,5 +46,6 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "json-server": "^0.16.3"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
