--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /part2/countries/node_modules/
 /part3/phonebook-backend/node_modules/
 /part3/phonebook-backend/build/
+/part3/phonebook-backend/db_local/
 
 /.pnp
 .pnp.js
