--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /part3/phonebook-backend/build/
 /part3/phonebook-backend/db_local/
 /part4/blog/node_modules/
+/part4/blog/.env
 
 /.pnp
 .pnp.js
