--- a/part4/blog/package.json
+++ b/part4/blog/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.9"
   },
