--- a/part4/blog/package.json
+++ b/part4/blog/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.9",
     "mongoose-unique-validator": "^2.0.3"
