Redux simple counter app

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /part4/blog/.env
 /part5/blog-frontend/node_modules/
 /part5/blog-frontend/cypress/videos/
+/part6/counter/node_modules/
 
 /.pnp
 .pnp.js
