--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /part5/blog-frontend/node_modules/
 /part5/blog-frontend/cypress/videos/
 /part6/counter/node_modules/
+/part6/unicafe-redux/node_modules/
 
 /.pnp
 .pnp.js
