redux anecdotes initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 /part5/blog-frontend/cypress/videos/
 /part6/counter/node_modules/
 /part6/unicafe-redux/node_modules/
+/part6/redux-anecdotes/node_modules/
 
 /.pnp
 .pnp.js
