--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /part6/counter/node_modules/
 /part6/unicafe-redux/node_modules/
 /part6/redux-anecdotes/node_modules/
+/part7/routed-anecdotes/node_modules/
 
 /.pnp
 .pnp.js
