custom hook with useEffect

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 /part6/unicafe-redux/node_modules/
 /part6/redux-anecdotes/node_modules/
 /part7/routed-anecdotes/node_modules/
+/part7/country-hooks/node_modules/
 
 /.pnp
 .pnp.js
