Custom hook useResource for simple get/post

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 /part6/redux-anecdotes/node_modules/
 /part7/routed-anecdotes/node_modules/
 /part7/country-hooks/node_modules/
+/part7/ultimate-hooks/node_modules/
 
 /.pnp
 .pnp.js
