--- a/part4/blog/package.json
+++ b/part4/blog/package.json
@@ -8,7 +8,8 @@
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "test-dev": "cross-env NODE_ENV=test jest --watch --verbose --runInBand",
-    "start:test": "cross-env NODE_ENV=test node index.js"
+    "start:test": "cross-env NODE_ENV=test node index.js",
+    "start:test-dev": "cross-env NODE_ENV=test nodemon index.js"
   },
   "keywords": [],
   "author": "",
