--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 /part7/ultimate-hooks/node_modules/
 /part7/bloglist-extended/node_modules/
 /part8/graphql-library-backend/node_modules/
+/part8/graphql-library-frontend/node_modules/
 
 /.pnp
 .pnp.js
