--- a/part8/graphql-library-backend/package.json
+++ b/part8/graphql-library-backend/package.json
@@ -11,7 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.25.2",
+    "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
+    "mongoose": "^5.13.3",
+    "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^2.0.9"
+  },
+  "devDependencies": {
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4"
   }
 }
