--- a/part8/graphql-library-backend/package.json
+++ b/part8/graphql-library-backend/package.json
@@ -13,6 +13,7 @@
     "apollo-server": "^2.25.2",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^2.0.9"
