initial commit, bmi and exercise calc CLI programs

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@
 /part8/graphql-library-backend/.env
 /part8/graphql-library-frontend/node_modules/
 /part9/ts-setup/node_modules/
+/part9/exercise-bmi/node_modules/
 
 /.pnp
 .pnp.js
