--- a/part9/exercise-bmi/package.json
+++ b/part9/exercise-bmi/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.4.13",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "eslint": "^7.32.0",
     "ts-node": "^10.1.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
