WebExercises endpoint for exercise calculator

--- a/part9/exercise-bmi/package.json
+++ b/part9/exercise-bmi/package.json
@@ -8,6 +8,7 @@
     "calculateExercises": "ts-node exerciseCalculator.ts",
     "start": "ts-node index.ts",
     "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
