--- a/part9/flight-diary/package.json
+++ b/part9/flight-diary/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "dev": "ts-node-dev index.ts",
+    "dev": "ts-node-dev src/index.ts",
+    "start": "node build/src/index.js",
     "lint": "eslint --ext .ts .",
-    "start": "node buld/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
