--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,11 @@
 /part8/graphql-library-frontend/node_modules/
 /part9/ts-setup/node_modules/
 /part9/exercise-bmi/node_modules/
+/part9/flight-diary/node_modules/
+/part9/flight-diary/build/
+/part9/patientor-frontend/node_modules/
+/part9/patientor-backend/node_modules/
+/part9/patientor-backend/build/
 
 /.pnp
 .pnp.js
