--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 /part9/patientor-backend/node_modules/
 /part9/patientor-backend/build/
 /part9/ts-react-app/node_modules/
+/part9/courseinfo/node_modules/
 
 /.pnp
 .pnp.js
