--- a/part9/courseinfo/.eslintrc
+++ b/part9/courseinfo/.eslintrc
@@ -73,7 +73,6 @@
       "error"
     ],
     "@typescript-eslint/explicit-function-return-type": 0,
-    "@typescript-eslint/explicit-module-boundary-types": 0,
-    "linebreak-style": 0
+    "@typescript-eslint/explicit-module-boundary-types": 0
   }
 }
